--- a/src/MEGASync/gui/linux/InfoDialog.ui
+++ b/src/MEGASync/gui/linux/InfoDialog.ui
@@ -320,6 +320,44 @@ border: none;
                 </spacer>
                </item>
                <item>
+                <widget class="QPushButton" name="bCloudDrive">
+                 <property name="minimumSize">
+                  <size>
+                   <width>24</width>
+                   <height>24</height>
+                  </size>
+                 </property>
+                 <property name="maximumSize">
+                  <size>
+                   <width>24</width>
+                   <height>24</height>
+                  </size>
+                 </property>
+                 <property name="cursor">
+                  <cursorShape>PointingHandCursor</cursorShape>
+                 </property>
+                 <property name="toolTip">
+                  <string>Open Cloud drive</string>
+                 </property>
+                 <property name="text">
+                  <string/>
+                 </property>
+                 <property name="icon">
+                  <iconset resource="../Resources_win.qrc">
+                   <normaloff>:/images/ico-cloud-drive.png</normaloff>:/images/ico-cloud-drive.png</iconset>
+                 </property>
+                 <property name="iconSize">
+                  <size>
+                   <width>24</width>
+                   <height>24</height>
+                  </size>
+                 </property>
+                 <property name="flat">
+                  <bool>false</bool>
+                 </property>
+                </widget>
+               </item>
+               <item>
                 <widget class="QPushButton" name="bAddBackup">
                  <property name="minimumSize">
                   <size>
@@ -3744,44 +3782,6 @@ border: none;
                    <width>182</width>
                    <height>28</height>
                   </size>
-                 </property>
-                </widget>
-               </item>
-               <item>
-                <widget class="QPushButton" name="bCloudDrive">
-                 <property name="minimumSize">
-                  <size>
-                   <width>24</width>
-                   <height>24</height>
-                  </size>
-                 </property>
-                 <property name="maximumSize">
-                  <size>
-                   <width>24</width>
-                   <height>24</height>
-                  </size>
-                 </property>
-                 <property name="cursor">
-                  <cursorShape>PointingHandCursor</cursorShape>
-                 </property>
-                 <property name="toolTip">
-                  <string>Open Cloud drive</string>
-                 </property>
-                 <property name="text">
-                  <string/>
-                 </property>
-                 <property name="icon">
-                  <iconset resource="../Resources_macx.qrc">
-                   <normaloff>:/images/ico-cloud-drive.png</normaloff>:/images/ico-cloud-drive.png</iconset>
-                 </property>
-                 <property name="iconSize">
-                  <size>
-                   <width>24</width>
-                   <height>24</height>
-                  </size>
-                 </property>
-                 <property name="flat">
-                  <bool>false</bool>
                  </property>
                 </widget>
                </item>
