SNC-5182. Add a Create Sync button.

--- a/src/MEGASync/gui/Resources_linux.qrc
+++ b/src/MEGASync/gui/Resources_linux.qrc
@@ -1499,7 +1499,6 @@
         <file>images/StalledIssues/x-circle-solid.png</file>
         <file>images/StalledIssues/x-circle-solid@2x.png</file>
         <file>images/StalledIssues/x-circle-solid@3x.png</file>
-        <file>images/star-spark.svg</file>
         <file>images/banner/warning.svg</file>
         <file>images/banner/error.svg</file>
         <file>images/banner/info.svg</file>
@@ -1509,5 +1508,6 @@
         <file>images/default-avatar.jpg</file>
         <file>images/default-avatar@2x.jpg</file>
         <file>images/default-avatar@3x.jpg</file>
+        <file>images/icon_plus.svg</file>
     </qresource>
 </RCC>
