--- a/src/MEGASync/gui/Resources_qml.qrc
+++ b/src/MEGASync/gui/Resources_qml.qrc
@@ -26,7 +26,6 @@
         <file>images/qml/onboarding/pc.svg</file>
         <file>images/qml/onboarding/pc_mega.svg</file>
         <file>images/qml/onboarding/person.svg</file>
-        <file>images/qml/onboarding/plus.svg</file>
         <file>images/qml/onboarding/resume.svg</file>
         <file>images/qml/onboarding/selective_sync.svg</file>
         <file>images/qml/onboarding/shield_account_free.svg</file>
@@ -131,5 +130,6 @@
         <file>images/icons/rotate_ccw.svg</file>
         <file>images/icons/log-out-01.svg</file>
         <file>images/qml/sync_exclusions/folder-file.svg</file>
+        <file>images/icon_plus.svg</file>
     </qresource>
 </RCC>
