--- a/src/MEGASync/gui/Resources_win.qrc
+++ b/src/MEGASync/gui/Resources_win.qrc
@@ -1531,5 +1531,11 @@
         <file>images/default-avatar.jpg</file>
         <file>images/default-avatar@2x.jpg</file>
         <file>images/default-avatar@3x.jpg</file>
+        <file>images/node_selector/view/trash.png</file>
+        <file>images/node_selector/view/trash@2x.png</file>
+        <file>images/node_selector/view/trash@3x.png</file>
+        <file>images/node_selector/view/rubbish_empty.png</file>
+        <file>images/node_selector/view/rubbish_empty@2x.png</file>
+        <file>images/node_selector/view/rubbish_empty@3x.png</file>
     </qresource>
 </RCC>
