SNC-5164. Remove icon path from DownloadQueueController

--- a/src/MEGASync/gui/macx/LowDiskSpaceDialog.ui
+++ b/src/MEGASync/gui/macx/LowDiskSpaceDialog.ui
@@ -87,6 +87,12 @@ QPushButton {
          <property name="text">
           <string notr="true"/>
          </property>
+         <property name="pixmap">
+          <pixmap resource="../Resources_macx.qrc">:/images/drive-low-space.svg</pixmap>
+         </property>
+         <property name="scaledContents">
+          <bool>true</bool>
+         </property>
         </widget>
        </item>
        <item>
