--- a/src/MEGASync/gui/win/LowDiskSpaceDialog.ui
+++ b/src/MEGASync/gui/win/LowDiskSpaceDialog.ui
@@ -92,6 +92,12 @@ QPushButton {
          <property name="text">
           <string notr="true"/>
          </property>
+         <property name="pixmap">
+          <pixmap resource="../Resources_win.qrc">:/images/drive-low-space.svg</pixmap>
+         </property>
+         <property name="scaledContents">
+          <bool>true</bool>
+         </property>
         </widget>
        </item>
        <item>
