--- a/src/MEGASync/gui/node_selector/gui/linux/NodeSelectorTreeViewWidget.ui
+++ b/src/MEGASync/gui/node_selector/gui/linux/NodeSelectorTreeViewWidget.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>562</width>
+    <width>583</width>
     <height>433</height>
    </rect>
   </property>
@@ -506,6 +506,41 @@ QToolButton:pressed
              </property>
              <property name="not_change_text_color" stdset="0">
               <bool>true</bool>
+             </property>
+             <property name="icon_spacing" stdset="0">
+              <UInt>6</UInt>
+             </property>
+             <property name="hover_selected" stdset="0">
+              <bool>true</bool>
+             </property>
+             <attribute name="buttonGroup">
+              <string notr="true">searchFilterButtonGroup</string>
+             </attribute>
+            </widget>
+           </item>
+           <item>
+            <widget class="QToolButton" name="rubbishSearch">
+             <property name="cursor">
+              <cursorShape>PointingHandCursor</cursorShape>
+             </property>
+             <property name="text">
+              <string>Rubbish bin</string>
+             </property>
+             <property name="icon">
+              <iconset resource="../../../Resources_linux.qrc">
+               <normaloff>:/images/node_selector/search_filter/small_trash_default.png</normaloff>:/images/node_selector/search_filter/small_trash_default.png</iconset>
+             </property>
+             <property name="checkable">
+              <bool>true</bool>
+             </property>
+             <property name="toolButtonStyle">
+              <enum>Qt::ToolButtonTextBesideIcon</enum>
+             </property>
+             <property name="not_change_text_color" stdset="0">
+              <bool>true</bool>
+             </property>
+             <property name="default_icon" stdset="0">
+              <string notr="true">qrc:/images/node_selector/search_filter/small_trash_default.png</string>
              </property>
              <property name="icon_spacing" stdset="0">
               <UInt>6</UInt>
